# pico-overheat-alarm

./: CMakeLists.txt  LICENSE  README.md  diagram.json  main.cpp  pico.hpp  wokwi.toml
debugging/: debugging.cpp  debugging.hpp
src/: main.cpp  pico.hpp
utils/oled/: raspberry26x32.hpp  ssd1306.cpp  ssd1306.hpp  ssd1306_font.hpp
utils/temp_press_sensor/: bmp280.cpp  bmp280.hpp
